<resources>
    <string name="app_name">HarvestHand</string>
    <string name="title_activity_entry_tutorial">EntryTutorialActivity</string>

    <!--Signup-->
    <string name="signup">Sign up</string>
    <string name="signin">Log in</string>
    <string name="input_your_number">Your Phone Number</string>
    <string name="welcome_to_harvesthand">Welcome to HarvestHand</string>
    <string name="about">About us</string>
    <string name="entry_tutorial_activity_label">Tutorial</string>
    <string name="logout">logout</string>

    <!--Radiobuttons-->
    <string name="profi">Literate</string>
    <string name="user">Illiterate</string>

    <!--Feedback messages-->
    <string name="errmsg_valid_input_required">Valid input required!</string>
    <string name="errmsg_number_required">Please enter Telephone number</string>
    <string name="msg_choice_typeandgender">Please select Profiletype!</string>
    <string name="msg_internal_error">Internal Error! Please try again</string>
    <string name="msg_number_exist">This Number already in use!</string>
    <string name="msg_signup_success">Registration successful!</string>
    <string name="connection_err">Connection error!</string>
    <string name="msg_number_incorrect">Number incorrect!</string>
    <string name="msg_login_successful">Login successful</string>
    <string name="msg_404_error">Error! Resource not found</string>
    <string name="msg_no_internet_connection">No internet connection!</string>
    <string name="msg_please_login">Please Login!</string>
    <string name="msg_error">Error!</string>
    <string name="msg_no_data">No data found!</string>
    <string name="msg_can_not_get_location">Can not get location</string>
    <string name="msg_receive_gps_data">GPS data received</string>
    <string name="msg_request_location">Request location...</string>
    <string name="msg_cant_save">Error, cannot save. Please try again</string>
    <string name="msg_user_not_found">User not found</string>
    <string name="msg_select_spinners">Please choose  Crop and Soil!</string>
    <string name="msg_no_data_available">No data available!</string>
    <string name="msg_add_location">Please add location!</string>
    <string name="msg_entry_deleted">Entry deleted</string>
    <string name="msg_entry_not_found">Entry not found</string>
    <string name="msg_data_saved">Data saved</string>
    <string name="msg_no_changes">No changes</string>
    <string name="msg_collaborator_added">Collaborator added</string>
    <string name="msg_collaborator_removed">Collaborator removed</string>

    <!--Add new Entry Activity Strings-->
    <string name="new_entry_hint_name">Name</string>
    <string name="new_entry_hint_location">Location</string>
    <string name="new_entry_hint_area">Land area</string>
    <string name="new_entry_hint_height">Height</string>
    <string name="new_entry_hint_airtemp">Air temp. ℃</string>
    <string name="new_entry_hint_ph">PH</string>
    <string name="new_entry_hint_airmoisture">Air humidity % </string>
    <string name="new_entry_hint_soiltemperature">Soil temp. ℃</string>
    <string name="new_entry_hint_soilmoisture">Soil moisture %</string>
    <string name="new_entry_add_collabs">Add collaborators</string>
    <string name="new_entry_hint_collab">Number</string>
    <string name="label_new_entry">New Entry</string>
    <string name="tutorial_month"> months</string>
    <string name="add_entry_m_squared" translatable="false">m²</string>
    <string name="add_entry_meter" translatable="false"> m</string>

    <!--Menu items-->
    <string name="delete_menu_item">Delete</string>
    <string name="done_menu_item">Done</string>
    <string name="person_menu_item">Person</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="menu_item_speech">Speech</string>
    <string name="item_menu_edit">Edit</string>

    <string name="title_activity_entry_details">EntryDetails</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="text_crop">Crop</string>
    <string name="text_soil_temp">Soil Temp.</string>
    <string name="text_soil_moisture">Soil moisture</string>
    <string name="text_soil">Soil</string>

    <!--Dialogs-->
    <string name="dialog_enter_ip_address">Enter IP Address</string>
    <string name="input_ip_address">IP Address</string>
    <string name="dialog_button_save">save</string>
    <string name="dialog_ip_saved">IP saved</string>
    <string name="dialog_please_enter_ip">Please enter IP</string>
    <string name="dialog_ip_discard">discard</string>
    <string name="dialog_ip_not_changed">IP not changed</string>
    <string name="delete_dialog_msg">Delete this Entry?</string>
    <string name="button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="msg_unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep editing</string>

    <!--TextToSpech Function-->
    <!--String for List Item-->
    <string name="item_speaktext_name">Name:</string>
    <string name="item_speaktext_comma" translatable="false">,</string>
    <string name="item_speaktext_location">Location:</string>
    <string name="item_speaktext_area">Area:</string>
    <string name="titel_activity_user_profile">Profile</string>
    <!--Strings for EntryTutorialActivity-->
    <string name="property_airtemp">Air temperature</string>
    <string name="property_airhumidity">Air humidity</string>
    <string name="property_soiltemp">Soil temperature</string>
    <string name="property_soilmoisture">Soil moisture</string>
    <string name="property_ph">PH-Value</string>
    <string name="property_soiltype">Type of soil</string>
    <!--Strings for EntryTutorialActivity-->
    <string name="tutorial_speaktext_location">Current Location is </string>
    <string name="tutorial_speaktext_height">Current height above sea level is </string>
    <string name="tutorial_speaktext_mature">Mature in </string>
    <!--Strings for ShowTutorialActivity-->
    <string name="show_should_be_value">Value for this Property should be </string>
    <string name="show_current_value_of">Current value of</string>
    <string name="show_current_value_is">is </string>

    <!--Description Strings for each Image/Animation/Video in Tutorial-->
    <!--Description for tutorial_soilmoisture_less_2 Image -->
    <string name="desc_soilmoisture_less_2_1">pots of water is required weekly for your Field </string>
    <string-array name="desc_array_soilmoisture_less_2">
        <item>@string/desc_soilmoisture_less_2_1</item>
    </string-array>
    <!--Description for tutorial_soilmoisture_less_1 Image -->
    <string name="desc_soilmoisture_less_1_1">If the soil moisture is too low, the plant is dried up
        and is no longer able to absorb nutrients with the roots.</string>
    <string-array name="desc_array_soilmoisture_less_1">
        <item>@string/desc_soilmoisture_less_1_1</item>
    </string-array>
    <!--Description for tutorial_airtemp_less_1 Image -->
    <string name="desc_airtemp_less_1_1">It is to cold maaaan. Do something!!! Brrrr</string>
    <string-array name="desc_array_airtemp_less_1">
        <item>@string/desc_airtemp_less_1_1</item>
    </string-array>
    <!--Description for tutorial_airtemp_greater_1 Image -->
    <string name="desc_airtemp_greater_1_1">Coffee plants are shadow plants and are therefore usually
        planted in mixed forests under shade-providing trees.</string>
    <string-array name="desc_array_airtemp_greater_1">
        <item>@string/desc_airtemp_greater_1_1</item>
    </string-array>

    <!--Description for tutorial_soilmoisture_greater_1 Image -->
    <string name="desc_soilmoisture_greater_1_1">If the precipitation is sufficiently high with 5
        liters per square meter, the coffee plants must not be irrigated.</string>
    <string name="desc_soilmoisture_greater_1_2">If the soil moisture is too high, the plants can not
        absorb enough nutrients via the roots and they are deficient.</string>
    <string name="desc_soilmoisture_greater_1_3">In consequence, she enters.</string>
    <string-array name="desc_array_soilmoisture_greater_1">
        <item>@string/desc_soilmoisture_greater_1_1</item>
        <item>@string/desc_soilmoisture_greater_1_2</item>
        <item>@string/desc_soilmoisture_greater_1_3</item>
    </string-array>

    <!--Description for tutorial_soilmoisture_greater_2 Image -->
    <string name="desc_soilmoisture_greater_2_1">pots of water is required weekly for your Field</string>
    <string-array name="desc_array_soilmoisture_greater_2">
        <item>@string/desc_soilmoisture_greater_2_1</item>
    </string-array>

    <!--Description for tutorial_general_coffe_1 Image -->
    <string name="desc_general_coffe_1_1">Coffee plants should ideally be planted at a distance of 3 meters.</string>
    <string-array name="desc_array_general_coffe_1">
        <item>@string/desc_general_coffe_1_1</item>
    </string-array>

    <!--Description for tutorial_general_coffe_2 Image -->
    <string name="desc_general_coffe_2_1">Only red coffee cherries should be harvested.</string>
    <string name="desc_general_coffe_2_2">Green, yellow and black fruits influence the taste of coffee negatively.</string>
    <string-array name="desc_array_general_coffe_2">
        <item>@string/desc_general_coffe_2_1</item>
        <item>@string/desc_general_coffe_2_2</item>
    </string-array>

    <!--Description for tutorial_general_coffe_3 Image -->
    <string name="desc_general_coffe_3_1">The ripe coffee cherries should be separated by hand with a
        slight twisting movement from the plants. </string>
    <string name="desc_general_coffe_3_2">Injuries to the fruit should be avoided.</string>
    <string-array name="desc_array_general_coffe_3">
        <item>@string/desc_general_coffe_3_1</item>
        <item>@string/desc_general_coffe_3_2</item>
    </string-array>

    <!--Description for tutorial_general_coffe_4 Image -->
    <string name="desc_general_coffe_4_1">The floor moisture can be determined with a floor gauge.</string>
    <string name="desc_general_coffe_4_2">To do this, the device is plugged into the ground and the measurement is started. </string>
    <string-array name="desc_array_general_coffe_4">
        <item>@string/desc_general_coffe_4_1</item>
        <item>@string/desc_general_coffe_4_2</item>
    </string-array>

    <!--Cropart spinner Strings-->
    <string name="crop_default">Crop art</string>
    <string name="crop_coffe">Coffe</string>
    <string name="crop_cacao">Cacao</string>
    <string name="crop_banana">Banana</string>

    <string-array name="crop_spinner_array">
        <item>@string/crop_default</item>
        <item>@string/crop_coffe</item>
        <item>@string/crop_cacao</item>
        <item>@string/crop_banana</item>
    </string-array>

    <!--Soilart spinner Strings-->
    <string name="soil_default">Soil art</string>
    <string name="soil_sand">Sand</string>
    <string name="soil_clay">Clay</string>
    <string name="soil_humus">Humus</string>
    <string-array name="soil_spinner_array">
        <item>@string/soil_default</item>
        <item>@string/soil_sand</item>
        <item>@string/soil_clay</item>
        <item>@string/soil_humus</item>
    </string-array>

    <string name="settings_menu_item">settings</string>

</resources>
