<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context="com.example.android.harvesthand.SignUp.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_inputlayout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout">

            <EditText
                android:id="@+id/signup_input_number"
                style="@style/inputsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_your_number"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_usertype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_literate"
                style="@style/rbSignUpStyle"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/profi" />

            <RadioButton
                android:id="@+id/rb_illiterate"
                style="@style/rbSignUpStyle"
                android:layout_height="wrap_content"
                android:text="@string/user" />
        </RadioGroup>

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
