<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackgroud"
    tools:context="com.example.android.harvesthand.AddNewEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/details_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_item_image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/crop_0_caffe_img"
                        app:civ_border_color="@color/colorMainBackgroud"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/details_item_image"
                        android:maxLines="1"
                        android:text="Name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <LinearLayout
                        android:id="@+id/details_item_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_name"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_toRightOf="@+id/details_item_image">

                        <ImageView
                            android:id="@+id/details_location_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/location_icon" />

                        <TextView
                            android:id="@+id/details_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/name"
                            android:layout_marginLeft="8dp"
                            android:maxLines="1"
                            android:text="Sinegal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <ImageView
                            android:id="@+id/details_area2_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ruler" />


                        <TextView
                            android:id="@+id/details_area"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="100 ha"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/details_show_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:text="@string/show_tutorial"
                    android:textAllCaps="true"
                    android:textColor="@color/wallet_holo_blue_light" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/details_card_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_text_crop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_crop" />

                    <TextView
                        android:id="@+id/details_text_soil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_soil" />

                    <TextView
                        android:id="@+id/details_text_soil_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/text_soil_temp" />

                    <TextView
                        android:id="@+id/details_text_soil_moisture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_soil_moisture" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_crop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="Coffee"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/details_soil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="Sand"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/details_soil_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:text="22"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/details_soil_moisture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:text="43%"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>


